--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,15 @@
 export(expand_daily)
 export(get_interest_rates)
 export(xts2tbl)
+importFrom(dplyr,as_data_frame)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,data_frame)
 importFrom(lubridate,today)
 importFrom(lubridate,ymd)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_parent)
+importFrom(xts,xts)
+importFrom(zoo,index)
+importFrom(zoo,na.locf)
