--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: nbpInterestRatesR
-Title: Interest rates from National Bank of Poland.
+Title: Interest rates from National Bank of Poland
 Version: 0.1.0
 Authors@R: person("Zygmunt", "Zawadzki", email = "zygmunt@zstat.pl", role = c("aut", "cre"))
 Description: Simple package for downloading interest rates from National Bank of Poland.
 Depends:
     dplyr,
     xts
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
