--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,8 @@ Version: 0.2.0
 Authors@R: person("Zygmunt", "Zawadzki", email = "zygmunt@zstat.pl", role = c("aut", "cre"))
 Description: Simple package for downloading interest rates from National Bank of Poland.
 Date: 2018-06-14
+BugReports: https://github.com/zzawadz/nbpInterestRatesR/issues
+URL: https://www.nbpir.zstat.pl/
 Depends:
     dplyr,
     xts
