change name to nbpir

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: nbpInterestRatesR
+Package: nbpir
 Title: Interest rates from National Bank of Poland
 Version: 0.2.0
 Authors@R: person("Zygmunt", "Zawadzki", email = "zygmunt@zstat.pl", role = c("aut", "cre"))
 Description: Simple package for downloading interest rates from National Bank of Poland.
 Date: 2018-06-14
-BugReports: https://github.com/zzawadz/nbpInterestRatesR/issues
+BugReports: https://github.com/zzawadz/nbpir/issues
 URL: https://www.nbpir.zstat.pl/
 Depends:
     dplyr,
