--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ LazyData: true
 Imports:
     xml2,
     lubridate,
-    zoo
+    zoo,
+    readxl
 RoxygenNote: 6.0.1
 Suggests: covr,
     testthat
